# GoIT_WEB_exs

./: README.md  pyproject.toml  requirements.txt
course/module1/conspect/: adapter_pattern_ex.py  command_pattern_ex.py  proxy_pattern_ex.py
course/module1/m16_01_01/D/: end_01.py  end_02.py  end_03.py
course/module1/m16_01_01/I/: end_01.py  end_03.py  start_03.py
course/module1/m16_01_01/L/: end_01.py  end_02.py
course/module1/m16_01_01/O/: finish_01.py  finish_02.py  finish_03.py
course/module1/m16_01_01/S/: finish_01.py  finish_02.py
course/module1/video2/behavioral/: observer.py
course/module1/video2/creational/: factory.py  simple_factory.py  singleton.py
course/module1/video2/structural/: decorator.py  right_way.py  right_way_two.py
course/module10/conspect/lesson1/: pyproject.toml
course/module10/conspect/lesson2/: pyproject.toml
course/module10/conspect/lesson2/notes/noteapp/: forms.py  models.py  urls.py  views.py
course/module10/conspect/lesson2/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
course/module10/conspect/lesson2/notes/noteapp/templates/noteapp/: detail.html  index.html
course/module10/conspect/lesson2/notes/notes/: settings.py  urls.py
course/module10/conspect/lesson2/notes/users/: forms.py  urls.py  views.py
course/module10/conspect/lesson2/notes/users/migrations/: 0001_initial.py
course/module10/conspect/lesson2/notes/users/templates/users/: login.html  signup.html
course/module10/m16_10_01/: pyproject.toml
course/module10/m16_10_01/app_instagram/: manage.py
course/module10/m16_10_01/app_instagram/app_auth/: forms.py  urls.py  views.py
course/module10/m16_10_01/app_instagram/app_auth/templates/app_auth/: login.html  logout.html  register.html
course/module10/m16_10_01/app_instagram/app_instagram/: asgi.py  settings.py  urls.py  wsgi.py
course/module10/m16_10_01/app_instagram/app_photo/: forms.py  models.py  urls.py  views.py
course/module10/m16_10_01/app_instagram/app_photo/migrations/: 0001_initial.py  0002_rename_image_picture_path.py  0003_picture_user_alter_picture_path.py
course/module10/m16_10_01/app_instagram/app_photo/templates/app_photo/: base.html  edit_desc.html  index.html  pictures.html  upload.html
course/module10/m16_10_03/: pyproject.toml
course/module10/m16_10_03/todoapp/: config.ini
course/module10/m16_10_03/todoapp/infoboard/: apps.py  tasks.py
course/module10/m16_10_03/todoapp/infoboard/mongodb/: connect.py
course/module10/m16_10_03/todoapp/todo/: forms.py  urls.py  views.py
course/module10/m16_10_03/todoapp/todo/migrations/: 0001_initial.py
course/module10/m16_10_03/todoapp/todo/templates/todo/: create.html  delete.html  list.html  update.html
course/module10/m16_10_03/todoapp/todoapp/: settings.py  urls.py
course/module11/conspect/lesson1/: db.py  main.py  post_request_on_notes.py  pyproject.toml  validation_example.py
course/module11/conspect/lesson1/static/: index.html
course/module11/conspect/lesson2/: main.py  main_example.py  pyproject.toml
course/module11/conspect/lesson2/migrations/: env.py
course/module11/conspect/lesson2/migrations/versions/: 3aef317e1fbb_added_field_confirmed.py  70cdee50b044_init.py  bffd1afd561f_users_and_auth_added.py
course/module11/conspect/lesson2/src/: schemas.py
course/module11/conspect/lesson2/src/database/: models.py
course/module11/conspect/lesson2/src/repository/: notes.py  tags.py  users.py
course/module11/conspect/lesson2/src/routes/: auth.py  notes.py  tags.py
course/module11/conspect/lesson2/src/services/: auth.py  email.py
course/module12/conspect/lesson1/: jwt_example.py  pyproject.toml  sql_app.db
course/module12/conspect/lesson1/application1/: app.py  db.py  sql_app.db
course/module12/conspect/lesson1/application2/: app.db  app.py
course/module13/conspect/lesson1/: main.py  pyproject.toml
course/module1_OOP_hints/conspect/: adapter_pattern_ex.py  facade_pattern_ex.py  observer_pattern_ex.py
course/module2/m16_02_01/app_poetry_2609/: pyproject.toml
course/module2/m16_02_01/web16_development/: call.py  log1.py  log2.py  log3.py  log4.py  log5.py  main.py  my_logger.py  pyproject.toml  type_example.py
course/module2/m16_02_02/m16_app_pip/: Dockerfile  app.py  main.py
course/module2/m16_02_02/m16_poetry_app/: Dockerfile  app.py  pyproject.toml
course/module3/conspect/multiprocessing/: creating_new_proceses_ex.py  pipe_example.py  pool_of_processes.py  pool_of_processes2.py  queue_example.py  using_common_values.py  using_common_values2.py  using_manager_ex.py
course/module3/conspect/multithreading/: barrier_example.py  blocking_join_method.py  concurrent_futures_poos_example.py  condition_in_threads.py  event_example_2.py  event_in_threads.py  (+8 more)
course/module3/m16_03_01/: 01_thread_like_function.py  02_thread_like_class.py  03_thread_timer.py  04_thread_lock.py  05_event_thread.py  06_event_thread.py  07_event_stop.py  08_event_stop_start.py  09_condition_thread.py  10_basic_semaphore.py  11_pool_semaphore.py  12_barrier_thread.py
course/module4/m16_04_01/: main.py
course/module4/m16_04_02/: Dockerfile  main.py  pyproject.toml  socket_client.py  socket_server.py
course/module5/m16_05_01/: 01_intro.py  02_gather.py  03_create_task.py  04_forever.py  05_future.py  06_bounds.py  08_get_http.py  timing.py
course/module6/: dbtest.sqlite
course/module6/connect_db_sqlite_python/: clear_all_tables.py  connect.py  create_table.py  delete.py  seed.py  select.py  select_with_join.py  test.db  update.py
course/module6/salary_project/: create_db.py  fill_data.py  salary.db  salary.sql  select_average_salary_of_each_position.py  select_number_of_employees_in_each_company.py  select_workers_with_salary_more_5000_in_july.py
course/module6/sql_scripts/: insert_data.sql  select_data.sql  tables_creating.sql
course/module9/conspect/lesson1/books_to_scrape_parsing/: books.db  main.py  model.py  pyproject.toml
course/module9/m16_09_01/: kacapy.json  main.py
course/module9/m16_09_02/: authors.json  pyproject.toml  test_selenium.py
(+141 files in other folders)
