[tool.poetry]
name = "goit-web-exs"
version = "0.1.0"
description = "Trying poetry. Project for learning Python web developing"
authors = ["Vskesha <vskesha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
