[tool.poetry]
name = "goit-web-exs"
version = "0.1.0"
description = ""
authors = ["Vasyl Boliukh <89039235+Vskesha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
requests = "^2.31.0"
aiofile = "^3.8.8"
aiopath = "0.6.11"
aioshutil = "^1.3"
aiohttp = "^3.9.1"
websockets = "^12.0"
names = "^0.3.0"
faker = "^21.0.0"
httpx = "^0.26.0"
sqlalchemy = "^2.0.23"
pymongo = {extras = ["srv"], version = "^4.6.1"}
mongoengine = "^0.27.0"
pika = "^1.3.2"
celery = "^5.3.6"
redis-lru = "^0.1.2"
colorama = "^0.4.6"
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
