[tool.poetry]
name = "m16-10-03"
version = "0.1.0"
description = ""
authors = ["Vasyl Boliukh <89039235+Vskesha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
celery = "^5.3.6"
pymongo = "^4.6.1"
redis = "^5.0.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
