[tool.poetry]
name = "m16-poetry-app"
version = "0.1.1"
description = ""
authors = ["Vasyl Boliukh <vskesha@gmail.com>"]
readme = "README.md"
# packages = [{include = "m16-poetry-app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
